<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".ui.AddTopicFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/color_background"
        app:elevation="@dimen/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_left_arrow"
            app:navigationIconTint="@color/color_text_primary"
            app:title="@string/add_topic"
            app:titleTextAppearance="@style/TextStyle.Title.Large"
            app:titleTextColor="@color/color_text_primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_topic"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/spacing_normal"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_app_bar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_large"
        android:autofillHints="username"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/title"
        android:inputType="text"
        android:textColorHint="@color/color_text_tertiary"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:helperTextTextColor="@color/color_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_topic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_background"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:autofillHints="username"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/description"
        android:inputType="text"
        android:textColorHint="@color/color_text_tertiary"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:helperTextTextColor="@color/color_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_background" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_doctor_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:autofillHints="username"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/doctor_name"
        android:inputType="text"
        android:textColorHint="@color/color_text_tertiary"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:helperTextTextColor="@color/color_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_doctor_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_background" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add_topic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@drawable/button_background"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/add_topic"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_title"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_doctor_name"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>